# compass-specs

./: .gitreview  README.md  README.rst  setup.cfg
doc/source/: conf.py  index.rst
specs/: template.rst
specs/2.0/: compass-containerization.rst  fake.rst  ipa-integration.rst  refactor_progress_calculator_integration_test.rst
