[metadata]
name = compass-specs
summary = Compass Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = dev-team@syscompass.org
home-page = http://www.syscompass.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
